# emlite-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
ems_env/: CMakeLists.txt  main.c
examples/: audio.rs  bind.rs  console.rs  dom.rs  eval.rs
src/: common.rs  env.rs  lib.rs  wasip2env.rs
wit/: emcore.wit
